sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
var gnome = 0 
  
  while (gnome+1 < getNombreValeurs()){
		if( gnome = 0){
      gnome =gnome +1
    }else if (getValeur(gnome)<getValeur(gnome+1)){
      gnome=gnome+1
    }else{
      echange(gnome+1, gnome)
      gnome=gnome-1
      
    }
    
  }

}